--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.0",
+    "apexcharts": "^3.35.5",
+    "bootstrap": "^5.2.1",
+    "bootstrap-vue-3": "^0.3.3",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-flip-countdown": "^0.1.6",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
