--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-tel-input": "^6.0.5",
     "vue3-apexcharts": "^1.4.1",
     "vue3-flip-countdown": "^0.1.6",
     "vuetify": "^3.0.0-beta.0",
