--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "@mdi/font": "5.9.55",
     "@popperjs/core": "^2.11.6",
     "apexcharts": "^3.35.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "bootstrap-vue-3": "^0.3.3",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
+    "qrcode.vue": "^3.3.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vue-tel-input": "^6.0.5",
     "vue3-apexcharts": "^1.4.1",
     "vue3-flip-countdown": "^0.1.6",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
+    "vuex-persist": "^3.1.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
