--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vite preview",
     "build": "vite build",
     "lint": "vue-cli-service lint",
-    "dev": "vite"
+    "dev": "vite",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -20,6 +21,7 @@
     "qrcode.vue": "^3.3.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue-tel-input": "^6.0.5",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@intlify/vue-i18n-loader": "^3.0.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -48,6 +51,7 @@
     "sass-loader": "^12.0.0",
     "vite": "^2.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vue-cli-plugin-i18n": "~2.3.1",
     "vue-cli-plugin-vuetify": "~2.5.1"
   }
 }
